<resources>
    <string name="app_name">Health Diary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="frgCreateAccountTitle">Create New Account</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="hintDOB">Date Of Birth</string>
    <string name="hintPasswordConfirm">Confirm Password</string>
    <string name="alertTitle_Duplicated_Email">Duplicated email address</string>
    <string name="alertMessage_Duplicated_Email">The email address you are trying to use has already existed. Please use another email address.</string>
    <string name="alertButton_Close">Close</string>
    <string name="alertTitle_Unknow_Error">Unknow error encountered</string>
    <string name="title_activity_main">ActivityMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="alertTitle_Invalid_Login">Invalid emal/password pair</string>
    <string name="alertMessage_Invalid_Login">Sorry, we cannot find any account with the supplied email/password pair. Please check your email/password input and try again.</string>
    <string name="nav_menu_overview">Overview</string>
    <string name="nav_menu_bp">Blood Pressure</string>
    <string name="nav_menu_weight">Body Weight</string>
    <string name="nav_menu_bs">Blood Sugar</string>
    <string name="nav_menu_prescription">Prescription</string>
    <string name="nav_menu_observation">Observation</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_permission">Permission</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_logout">Sign out</string>
    <string name="snack_no_internet">Please connect to the Internet</string>
    <string name="tvSignUp">Not a member? Sign up now.</string>

    <string name="activity_fab_trans">activity_fab_transition</string>
    <string name="activity_form_trans">activity_form_transition</string>
    <string name="activity_text_trans">activity_text_transition</string>
    <string name="validate_empty_email">Please enter your email address</string>
    <string name="validate_invalid_email">Please enter a valid email address</string>
    <string name="validate_empty_password">Please enter your password</string>
    <string name="validate_short_password">Password must contains at least 8 characters</string>
    <string name="validate_empty_first_name">Please enter your first name</string>
    <string name="validate_invalid_first_name">Please enter your real first name</string>
    <string name="validate_empty_last_name">Please enter your last name</string>
    <string name="validate_invalid_last_name">Please enter your real last name</string>
    <string name="validate_empty_DOB">Please enter your date of birth</string>
    <string name="validate_invalid_DOB">Please enter a valid date of birth</string>
    <string name="validate_empty_sex">Please choose your sex</string>
    <string name="main_panel_title_bp">Blood pressure</string>
    <string name="main_panel_title_weight">Body Weight</string>
    <string name="main_panel_title_bs">Blood Sugar</string>
    <string name="main_panel_title_pres">Prescription</string>

</resources>
