<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quankm.healthdiary.FragmentCreateAccount"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/frgCreateAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:hint="@string/hintEmail"
        android:paddingBottom="@dimen/activity_vertical_margin"><requestFocus/></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"
        android:hint="@string/hintPassword"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edtPasswordConfirm"
        android:hint="@string/hintPasswordConfirm"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edtFirstName"
        android:hint="@string/hintFirstName"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edtLastName"
        android:hint="@string/hintLastName"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/edtDOB"
        android:hint="@string/hintDOB"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgSex"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/txtMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdMale" />

        <RadioButton
            android:text="@string/txtFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdFemale" />
    </RadioGroup>

    <Button
        android:text="@string/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:layout_gravity="end|bottom" />
</LinearLayout>
