<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.quankm.healthdiary.ActivitySignUp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layoutForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rect_rounded"
            android:elevation="@dimen/windowElevation"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:transitionName="@string/activity_form_trans">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextStyleEditTextLayout">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextStyleEditTextLayout">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextStyleEditTextLayout">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:hint="@string/hintFirstName"
                    android:inputType="textPersonName"
                    android:transitionName="@string/activity_text_trans"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextStyleEditTextLayout">

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:hint="@string/hintLastName"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextStyleEditTextLayout">

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:inputType="none"
                    android:id="@+id/edtDOB"
                    android:hint="@string/hintDOB"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:focusableInTouchMode="false"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdgSex"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp">

                <RadioButton
                    android:text="@string/txtMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdMale" />

                <RadioButton
                    android:text="@string/txtFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdFemale" />
            </RadioGroup>
        </LinearLayout>

    </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_check_white_36dp"
            app:layout_anchor="@id/layoutForm"
            app:layout_anchorGravity="bottom|center"
            android:transitionName="@string/activity_fab_trans"
            />

</android.support.design.widget.CoordinatorLayout>
