<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quankm.healthdiary.FragmentMain">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/padding_main_panel_horizontal"
        android:paddingEnd="@dimen/padding_main_panel_horizontal"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="@dimen/windowElevation"
            android:background="@drawable/background_rect_rounded"
            android:layout_marginBottom="@dimen/main_panel_margin_bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginBottom="@dimen/title_panel_margin_bottom"
                android:id="@+id/title_panel_bp"
                android:background="@drawable/background_rect_half_rounded">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_heart_pulse_white_24dp"
                    android:paddingEnd="8dp"
                    android:tint="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:text="@string/main_panel_title_bp"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_weight="7" />
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_up_drop_circle_black_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/btnExpandBP"
                    android:tint="@color/colorPrimaryDark"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_panel_bp"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="This is a testing text, more content will go here"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="This is a testing text, more content will go here"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="start"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:text="Details..."/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="@dimen/windowElevation"
            android:background="@drawable/background_rect_rounded"
            android:layout_marginBottom="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/title_panel_weight"
                android:background="@drawable/background_rect_half_rounded_accent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:gravity="center_vertical"
                    android:text="@string/main_panel_title_weight"
                    android:textColor="@color/windowBackground"
                    android:textAllCaps="true"
                    android:layout_weight="7"
                    android:drawableStart="@drawable/ic_scale_white_24dp"
                    android:drawablePadding="8dp"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_up_drop_circle_white_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/btnExpandWeight"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_panel_weight"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="This is a testing text, more content will go here"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="@dimen/windowElevation"
            android:background="@drawable/background_rect_rounded"
            android:layout_marginBottom="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/title_panel_bs"
                android:background="@drawable/background_rect_half_rounded_accent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:gravity="center_vertical"
                    android:text="@string/main_panel_title_bs"
                    android:textColor="@color/windowBackground"
                    android:textAllCaps="true"
                    android:layout_weight="7"
                    android:drawableStart="@drawable/ic_food_white_24dp"
                    android:drawablePadding="8dp"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_up_drop_circle_white_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/btnExpandBS"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_panel_bs"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="This is a testing text, more content will go here"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="@dimen/windowElevation"
            android:background="@drawable/background_rect_rounded"
            android:layout_marginBottom="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:id="@+id/title_panel_pres"
                android:background="@drawable/background_rect_half_rounded_accent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:gravity="center_vertical"
                    android:text="@string/main_panel_title_pres"
                    android:textColor="@color/windowBackground"
                    android:textAllCaps="true"
                    android:layout_weight="7"
                    android:drawableStart="@drawable/ic_needle_white_24dp"
                    android:drawablePadding="8dp"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_up_drop_circle_white_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/btnExpandPres"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_panel_pres"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="This is a testing text, more content will go here"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
